# radgi

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  radgi.sln  radgi.vcxproj  radgi.vcxproj.filters  vcpkg-configuration.json  vcpkg.json
report/: reference.bib  report.tex
resources/: cornell_box-lightmapped.blend  cornell_box.mtl
resources/cornell_box/: lightmapped.blend
resources/sponza/: lightmapped.blend  new_sponza.blend  new_sponza.mtl  sponza.blend  sponza.mtl  sponza_objects.mtl
resources/test_scene/: lightmapped.blend  test_scene.blend  test_scene.mtl
src/: BVH.cpp  BVH.h  Mesh.cpp  Mesh.h  RadiositySolver.cpp  RadiositySolver.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  main.cpp  pch.h
src/GISolver/: GPUSolver.cpp  GPUSolver.h  GatheringSolver.cpp  GatheringSolver.h  IGISolver.cpp  IGISolver.h  ProgressiveSolver.cpp  ProgressiveSolver.h
src/GISolver/CUDASolver/: CUDASolver.cpp  CUDASolver.h  CUDAStructs.h  configuration.h  radiosity.cu  utils.cuh
src/Utils/: Log.h  Math.h  Ptr.h  Random.h  Scalars.h
